Update current weather styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("assets/sunset.jpg");
+  background-image: url('assets/Haze.jpg');
   /* Full height */
   box-sizing: border-box;
   width: 100vw;
