--- a/src/components/css/currentLocation.css
+++ b/src/components/css/currentLocation.css
@@ -4,11 +4,11 @@
 
 .current-location-icon {
   width: 100%;
+  padding-left: 0.4em;
 }
 
 .current-location-city {
   grid-area: menu;
-
   text-align: left;
   padding-top: 0.6em;
   position: relative;
@@ -34,16 +34,16 @@
   top: 58%;
   height: 10em;
   margin-top: -1.4em;
+  padding-left: 0.5em;
 }
 
-@media only screen and (max-width: 1024px) {
-  .current-location-city-name {
-    font-size: 0.8em;
-    position: absolute;
-    top: 52%;
-    height: 10em;
-    margin-top: -1.4em;
-  }
+.current-location-button {
+  font-size: 0.9em;
+  position: absolute;
+  top: 54%;
+  right: 4%;
+  height: 10em;
+  margin-top: -1.1em;
 }
 
 .current-location-state-name {
@@ -52,13 +52,32 @@
   top: 50%;
   height: 10em;
   margin-top: 0.6em;
+  padding-left: 1em;
 }
 
-.current-location-button {
-  font-size: 0.9em;
-  position: absolute;
-  top: 50%;
-  right: 4%;
-  height: 10em;
-  margin-top: -1.1em;
+@media only screen and (max-width: 1105px) {
+  .current-location-city-name {
+    font-size: 0.8em;
+    position: absolute;
+    top: 52%;
+    height: 10em;
+    margin-top: -1.4em;
+    padding-left: 0.7em;
+  }
+  .current-location-button {
+    font-size: 0.9em;
+    position: absolute;
+    top: 57%;
+    right: 4%;
+    height: 10em;
+    margin-top: -1.1em;
+  }
+  .current-location-state-name {
+    font-size: 0.5em;
+    position: absolute;
+    top: 50%;
+    height: 10em;
+    margin-top: 0.6em;
+    padding-left: 1em;
+  }
 }
