--- a/src/components/css/button.css
+++ b/src/components/css/button.css
@@ -1,10 +1,10 @@
 .button-input {
   color: white;
   background-color: rgba(7, 23, 33, 0.6);
-  font-size: 0.5em;
+  font-size: 1vw;
   font-weight: 800;
   border-radius: 15px;
-  padding: 1em;
+  padding: 1vw;
   border: none;
   cursor: pointer;
   outline: none;
@@ -20,24 +20,12 @@
 }
 
 .button-image {
-  vertical-align: sub;
-  height: 20px;
-  width: 20px;
+  height: 1.3vw;
+  width: 1.3vw;
   padding-right: 0.3em;
+  vertical-align: sub;
 }
 
 .button-text {
-  font-size: 20px;
-}
-
-@media only screen and (max-width: 1105px) {
-  .button-text {
-    font-size: 17px;
-  }
-  .button-image {
-    vertical-align: unset;
-    height: 15px;
-    width: 15px;
-    padding-right: 0.3em;
-  }
+  font-size: 1.2vw;
 }
