--- a/src/components/css/hourlyForecast.css
+++ b/src/components/css/hourlyForecast.css
@@ -52,17 +52,21 @@
     'header header header header header header header'
     'one two three four five six seven'
     'eight nine ten eleven twelve thirteen fourteen';
-  grid-template-rows: 2em 2em 2em;
   grid-gap: 10px;
-  padding: 0.5em 1em 1em 1em;
+  grid-template-rows: 5vw 4vw 4vw;
+  padding: 0.5vw 1vw 1vw 1vw;
 }
 
 .hourly-forecast-grid-container > div:not(:first-child) {
   border: 1px solid #ffffffb9;
-  font-size: 30px;
+  font-size: 2vw;
   border-radius: 5px;
   text-align: center;
   color: white;
+}
+
+.hourly-forecast-title {
+  font-size: 2.2vw;
 }
 
 .hourly-forecast-line {
