--- a/src/components/css/currentLocation.css
+++ b/src/components/css/currentLocation.css
@@ -3,8 +3,9 @@
 }
 
 .current-location-icon {
-  width: 100%;
-  padding-left: 0.4em;
+  height: 9.6vw;
+  width: 6vw;
+  padding-left: 2.5vw;
 }
 
 .current-location-city {
@@ -31,7 +32,7 @@
 .current-location-city-name {
   font-size: 2.5vw;
   position: absolute;
-  top: 58%;
+  top: 56%;
   height: 10em;
   margin-top: -1.4em;
   padding-left: 0.5em;
@@ -51,6 +52,6 @@
   position: absolute;
   top: 50%;
   height: 10em;
-  margin-top: 0.6em;
+  margin-top: 0.6vw;
   padding-left: 1em;
 }
