--- a/src/pages/css/weather.css
+++ b/src/pages/css/weather.css
@@ -32,8 +32,9 @@
 }
 
 .weather-grid-container > div {
-  background-color: rgba(123, 120, 120, 0.3);
+  background-color: rgba(60, 58, 58, 0.3);
   border-radius: 15px;
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .weather-grid-container {
