--- a/src/components/css/aroundWorld.css
+++ b/src/components/css/aroundWorld.css
@@ -51,10 +51,10 @@
 }
 
 .around-world-temp {
-  font-size: 1vw;
+  font-size: 1.4vw;
   padding-right: 1vw;
   float: right;
-  padding-top: 0.9vw;
+  padding-top: 0.7vw;
 }
 
 .around-world-title-text {
@@ -85,6 +85,21 @@
   transition: all 0.25s ease-in-out;
 }
 
+.around-world-city-active {
+  cursor: pointer;
+  margin: 1vw 1.5vw 0 1.5vw;
+  border: 1px solid rgba(60, 58, 58, 0.3);
+  border-radius: 10px;
+  background-color: rgba(7, 23, 33, 1);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: all 0.25s ease-in-out;
+}
+
 .around-world-city:hover {
   transform: scale(1.1);
+}
+
+.around-world-city:active {
+  transform: scale(1.1);
+  background-color: rgba(7, 23, 33, 0.7);
 }
